--- a/src/one/wwwroot/manifest.json
+++ b/src/one/wwwroot/manifest.json
@@ -1,6 +1,6 @@
 ﻿{
   "name": "Maske one",
-  "short_name": "M1",
+  "short_name": "one",
   "icons": [
     {
       "src": "assets/project_files/android-chrome-192x192.png",
