--- a/src/one/one.csproj
+++ b/src/one/one.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Syncfusion.EJ2.Blazor" Version="17.3.0.29-beta" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\two\src\one.Shared\one.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
