--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 ﻿{
-  "name": "Lebensraum Birs",
-  "short_name": "LeBi",
+  "name": "Maske one",
+  "short_name": "one",
   "icons": [
     {
-      "src": "assets/android-chrome-192x192.png",
+      "src": "assets/project_files/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "assets/android-chrome-512x512.png",
+      "src": "assets/project_files/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
